<resources>
    <string name="app_name">FirstProject</string>
    <string name="XYZ_Store">XYZ Store</string>
    <string name="eat_safe">Eat Safe</string>
    <string name="order">Order Now</string>
    <string name="est_time">Estimate Pickup Time - 30 Mins</string>
    <string name="act_time">Kindly contact Restaurant for actual time</string>
    <string name="inc_dec">0</string>
    <string name="str_name">Sivasi Kiranam Store</string>
    <string name="cell_txt">Toor dal</string>
    <string name="met_typ">5 kg</string>
    <string name="qty">5</string>
</resources>
