<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        card_view:cardElevation="5dp"
        android:layout_marginBottom="40dp"
        >
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_top"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/str_name"
                android:layout_marginTop="13dp"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <TableLayout
        android:layout_width="365dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal">
        <TableRow android:layout_height="40dp"
            android:layout_width="match_parent">
            <CheckBox
                android:layout_width="52dp"
                android:layout_height="40dp"
                android:background="@drawable/cell_shape"/>
            <TextView
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:text="@string/cell_txt"
                android:gravity="center"
                android:background="@drawable/cell_shape"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/met_typ"
                android:background="@drawable/cell_shape"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/qty"
                android:background="@drawable/cell_shape"/>
        </TableRow>
    </TableLayout>
</LinearLayout>