<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        card_view:cardElevation="5dp"
        android:layout_marginBottom="180dp"
        >
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_top"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="10dp"
        >
        <View
            android:layout_height="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_width="16dp"
            android:background="@drawable/ic_decrement"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inc_dec"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="18dp"/>
        <View
            android:layout_height="16dp"
            android:layout_width="16dp"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_increment"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="365dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        card_view:cardElevation="10dp"
        android:layout_marginBottom="40dp"
        >
        <LinearLayout
            android:layout_height="145dp"
            android:layout_width="210dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_group_pay_pick"
            >
        </LinearLayout>
        <TextView
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="260dp"
            android:text="@string/eat_safe"
            android:gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:text="@string/order"
            android:background="@drawable/order_now"
            android:textColor="@color/light_blue"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="110dp"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="365dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        card_view:cardElevation="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/est_time"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@color/light_green"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_time"
            android:layout_marginTop="72dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/light_blue"
            android:textSize="13sp"/>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
